<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home_bottom_navigation"
        android:title="@string/title_home_bottom_navigation"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/item_profile_bottom_navigation"
        android:title="@string/title_profile_bottom_navigation"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/item_settings_bottom_navigation"
        android:title="@string/title_settings_bottom_navigation"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/item_about_bottom_navigation"
        android:title="@string/title_about_bottom_navigation"
        android:icon="@drawable/ic_info"/>
</menu>